# fastenv

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: quickstart.md
docs/guides/: aws-secrets-manager.md  azure-key-vault.md  dotenv-migration.md  encryption.md  gcp-secret-manager.md  testing.md  type-coercion.md  validation.md  vault-integration.md
fastenv/: __init__.py  audit.py  cli.py  core.py  encrypt.py  example.py  schema.py
tests/: test_core.py  test_schema.py
