[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fastenv"
version = "0.1.0"
description = "Blazing-fast .env file manager for Python projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ali Pourrahim"}]
keywords = ["env", "dotenv", "environment", "cli", "devtools"]

[project.scripts]
fastenv = "fastenv.cli:main"
