[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastenv"
version = "0.1.0"
description = "Blazing-fast .env file manager for Python projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ali Pourrahim"}]
keywords = ["env", "dotenv", "environment", "cli", "devtools"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
]

[project.scripts]
fastenv = "fastenv.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fastenv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
