[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastenv"
version = "0.1.0"
description = ".env file manager with diff, validate, sync"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["fastenv"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402", "F401", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
